fix text alignment

--- a/static/style.css
+++ b/static/style.css
@@ -95,6 +95,10 @@ strong:after {
   content:"」";
 }
 
+article p {
+  text-align: justify;
+}
+
 p:after {
   color: var(--highlight-dark);
   content:"¬";
